# vdl-flow-app

./: .env.example  .gitignore  CLAUDE.md  Readme.md  VDL_FLOW_PROJECT_REPORT.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vite.ext.config.ts
chrome-ext/: manifest.json
src/: App.tsx  VDLFlowApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/analyzers/: cameraAnalyzer.ts  compositionAnalyzer.ts  ndfEstimator.ts  photometricAnalyzer.ts  styleAnalyzer.ts
src/api/: comfyuiAPI.ts  generatorAPI.ts
src/bridge/: ndfToVdl.test.ts  ndfToVdl.ts
src/components/: ColorPicker.tsx  EnvWarning.tsx  ErrorBoundary.tsx  FilmDNAPanel.tsx  GenHistoryPanel.tsx  NodeCard.tsx  OfflineBanner.tsx  RadarChart.tsx  ScriptPanel.tsx  SplashScreen.tsx  StoryboardWall.tsx  TemplatePanel.tsx
src/components/camera/: CameraHUD.tsx  OrbitController.tsx  SideView.tsx  TopView.tsx
src/constants/: nodeDefs.ts  nodeEdges.ts  nodePositions.ts  randomWords.ts
src/engine/: driftCorrector.ts  filmDNAAnalyzer.ts  filmDNAParser.ts  filmDNASerializer.ts  vdlTimeline.test.ts  vdlTimeline.ts
src/hooks/: useAnime.ts  useFilmDNA.ts  useGenHistory.ts  useGoogleDrive.ts  usePersistentFlow.ts  useProjectManager.ts  useTemplateVault.ts
src/i18n/: context.tsx  en.ts  zh-TW.ts
src/styles/: theme.ts
src/types/: anime.d.ts  exportPayload.ts  filmDNA.ts  vdl.ts
src/utils/: colorScience.test.ts  colorScience.ts  promptTranslator.ts  vdlExport.ts  visionQA.ts
(+5 files in other folders)
