[package]
name = "vdl-flow"
version = "1.0.0"
description = "VDL-FLOW — AI 動畫導演提示詞編排及視覺辨識工作站"
authors = ["LostMaxi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [
  "updater",
  "shell-open",
  "window-close",
  "window-minimize",
  "window-maximize"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
